# bfc

./: .gitignore  Makefile  README.md  bfc.cpp  common.h  compile.c  compile.h  file.cpp  file.h  instruction.h  make.deps  meson.build  options.cpp  options.h  program.cpp  program.h
src/: arch.c  arch.h  bfc.c  common.h  compile.c  compile.h  dstring.c  dstring.h  file.c  file.h  loop.c  loop.h  program.c  program.h  str.c  str.h
src/arch/: amd64.c  amd64.h  armv6l.c  armv6l.h
test/: cat.bf  check.c  hello.bf  simpletest.sh  testmain.c  testmain.cpp
